sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:19: error: not found: value len
  for (i <- len-2 to 0 by -1){
            ^